<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.dominiquesauvignon</groupId>
	<artifactId>MyBookManager</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>mybookmanager</name>

	<properties>
		<!-- 	<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		-->
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>21</javafx.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!-- GRAPHICS : Contient la classe Application et Stage (INDISPENSABLE) -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>21</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>fr.dominiquesauvignon.mybookmanager.MainApp</mainClass>
					<options>
						<option>--add-modules</option>
						<option>javafx.controls,javafx.graphics,javafx.fxml</option>
						<!-- AJOUTEZ CETTE LIGNE CI-DESSOUS POUR SUPPRIMER LES
						WARNINGS -->
						<option>--enable-native-access</option>
						<option>javafx.graphics</option>
					</options>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
